update new filter for blog

--- a/blog-cat.html
+++ b/blog-cat.html
@@ -15,6 +15,7 @@
     <script src="./js/link_header_footer.js"></script>
 </head>
 
+
 <body>
     <div id="header"></div>
     <!-- Giới thiệu -->
@@ -132,7 +133,7 @@
                                 nhà
                                 của bạn sạch sẽ hơn, và nhiều con mèo thực hiện nó khá tốt.
                             </p>
-                            <button>Xem hết</button>
+                            <a href="./blog-details-cat.html"><button>Xem hết</button></a>
                             <div class="hashtag">
                                 <p>#kienthuc #meo</p>
                             </div>
@@ -140,7 +141,7 @@
                     </div>
                     <div class="blog-card" id="blog-2">
                         <div class="blog-card-banner">
-                            <img src="./assets/images/blog/blog-card-2.png" alt="" width="380" height="300"
+                            <img src="./assets/images/blog/cat-3.jpeg" alt="" width="380" height="300"
                                 class="blog-banner-img">
                         </div>
                         <div class="blog-content-wrapper">
@@ -149,24 +150,22 @@
                                     <p class="doctor-name">Bác sĩ Truơng Thị Thanh Thanh</p>
                                 </div>
                             </div>
-                            <h3>Các dòng chó Pom phổ biến nhất tại Việt Nam </h3>
+                            <h3>Cho mèo ăn gì để lông mượt mà không bị xơ</h3>
                             <p class="blog-text">
-                                Chó Pom hay còn gọi là chó Phốc Sóc là một trong những giống chó cảnh
-                                nhỏ
-                                được
-                                ưa chuộng nhất tại Việt Nam hiện nay. Giống chó Pom có nhiều dòng khác nhau. Điều này có
-                                thể
-                                khiến nhiều người băn khoăn, không biết mình phù hợp để nuôi dòng chó Pom nào.
+                                Cho mèo ăn gì để lông mượt mà, đẹp không xơ rối là thắc mắc của rất nhiều người nuôi
+                                mèo. Tất cả chủ nuôi đều muốn chăm sóc mèo một cách tốt nhất, tránh để lông mèo bị xơ
+                                rối. Tuy nhiên, đối với những người mới nuôi mèo lần đầu hoặc chưa có kinh nghiệm sẽ gặp
+                                không ít khó khăn.
                             </p>
                             <button>Xem hết</button>
                             <div class="hashtag">
-                                <p>#kienthuc #cho</p>
+                                <p>#kienthuc #meo</p>
                             </div>
                         </div>
                     </div>
                     <div class="blog-card" id="blog-3">
                         <div class="blog-card-banner">
-                            <img src="./assets/images/blog/dog&cat2.jpeg" alt="" width="380" height="300"
+                            <img src="./assets/images/blog/cat-4.jpg" alt="" width="380" height="300"
                                 class="blog-banner-img">
                         </div>
                         <div class="blog-content-wrapper">
@@ -175,102 +174,93 @@
                                     <p class="doctor-name">Bác sĩ Nguyễn Đặng Bảo Ngọc</p>
                                 </div>
                             </div>
-                            <h3>Nhu cầu dinh dưỡng của chó và mèo theo khoa học</h3>
+                            <h3>Cách bổ sung canxi cho mèo con và trưởng thành</h3>
                             <p class="blog-text">
-                                Cũng như những động vật khác, chó và mèo cần có thức ăn để sống và duy trì sức khỏe.
-                                Những
-                                chất
-                                dinh dưỡng mà cơ thể động vật đòi hỏi nhưng cơ thể không tự tổng hợp được thì gọi là
-                                chất
-                                dinh
-                                dưỡng thiết yếu và phải được cung cấp từ thức ăn.
+                                Việc bổ sung Canxi cho mèo không quan trọng như với chó. Bởi chế độ ăn thường ngày của
+                                mèo đã đủ lượng canxi chúng cần. Tuy nhiên, không phải như vậy mà bạn có thể dễ dàng bỏ
+                                qua vấn đề này. Trong một số trường hợp, bận vẫn cần bổ sung canxi cho mèo.
                             </p>
                             <button>Xem hết</button>
                             <div class="hashtag">
-                                <p>#suckhoe #doisong</p>
+                                <p>#suckhoe #meo</p>
                             </div>
                         </div>
                     </div>
+                    <!-- Pagination -->
+                    <div class="pagination-container">
+                        <button class="btn-prep">
+                            <i class="fa-solid fa-caret-left"></i>
+                        </button>
+                        <ul class="pagination">
+                            <li class="page-product" value="1">1</li>
+                            <li class="page-product" value="2">2</li>
+                            <li class="page-product" value="4">...</li>
+                            <li class="page-product" value="5">5</li>
+                        </ul>
+                        <button class="btn-next">
+                            <i class="fa-solid fa-caret-right"></i>
+                        </button>
+                        <!-- <div class="pagination"> -->
+                    </div>
                 </div>
-                <!-- Pagination -->
-                <div class="pagination-container">
-                    <button class="btn-prep">
-                        <i class="fa-solid fa-caret-left"></i>
+            </div>
+        </div>
+        <!-- CÁC ƯU ĐÃI -->
+        <div class="deals">
+            <div class="title" style="margin-top: 2%;">
+                <div class="hr-lines">
+                    <h3>CÁC ƯU ĐÃI</h3>
+                </div>
+            </div>
+            <div class="deal-container">
+                <div class="left-deals">
+                    <h4 style="font-size: 35px; color: #FE5B2E;">THÔNG TIN KHUYẾN MÃI</h4>
+                    <p>Nhằm mục đích tri ân và hỗ trợ khách hàng, Petline cung cấp một số các ưu đãi, khuyến mãi dành
+                        riêng cho các Sen, nhanh tay nào!!! </p>
+                    <button class="booking-btn">
+                        <div class="icon"><i class="fa-solid fa-calendar-days"></i></div>
+                        <p>ĐẶT LỊCH</p>
                     </button>
-                    <ul class="pagination">
-                        <li class="page-product" value="1">1</li>
-                        <li class="page-product" value="2">2</li>
-                        <li class="page-product" value="4">...</li>
-                        <li class="page-product" value="5">5</li>
-                    </ul>
-                    <button class="btn-next">
-                        <i class="fa-solid fa-caret-right"></i>
-                    </button>
-                    <!-- <div class="pagination"> -->
                 </div>
-            </div>
-
-        </div>
-    </div>
-    </div>
-    <!-- CÁC ƯU ĐÃI -->
-    <div class="deals">
-        <div class="title" style="margin-top: 2%;">
-            <div class="hr-lines">
-                <h3>CÁC ƯU ĐÃI</h3>
-            </div>
-        </div>
-        <div class="deal-container">
-            <div class="left-deals">
-                <h4 style="font-size: 35px; color: #FE5B2E;">THÔNG TIN KHUYẾN MÃI</h4>
-                <p>Nhằm mục đích tri ân và hỗ trợ khách hàng, Petline cung cấp một số các ưu đãi, khuyến mãi dành
-                    riêng cho các Sen, nhanh tay nào!!! </p>
-                <button class="booking-btn">
-                    <div class="icon"><i class="fa-solid fa-calendar-days"></i></div>
-                    <p>ĐẶT LỊCH</p>
-                </button>
-            </div>
-            <div class="right-deals">
-                <div class="deal-card">
-                    <div class="deal-content-wrapper">
-                        <div>
-                            <div class="hr-lines" style="margin-left: 30px;">
-                                <p class="deal-name" style="padding-left:100px; font-size: 23px; margin-top: 7%;">
-                                    Ưu đãi thẻ tín
-                                    dụng</p>
+                <div class="right-deals">
+                    <div class="deal-card">
+                        <div class="deal-content-wrapper">
+                            <div>
+                                <div class="hr-lines" style="margin-left: 30px;">
+                                    <p class="deal-name" style="padding-left:100px; font-size: 23px; margin-top: 7%;">
+                                        Ưu đãi thẻ tín
+                                        dụng</p>
+                                </div>
                             </div>
+                            <h1>TRẢ GÓP <br> LÃI SUẤT 0%</h1>
                         </div>
-                        <h1>TRẢ GÓP <br> LÃI SUẤT 0%</h1>
+                        <div class="deal-banner">
+                            <img src="./assets/images/blog/deal-1.png" alt="" width="350" height="350"
+                                class="deal-banner-img">
+                            <h3>Trả góp ngay, rước BOSS liền tay!</h3>
+                        </div>
                     </div>
-                    <div class="deal-banner">
-                        <img src="./assets/images/blog/deal-1.png" alt="" width="350" height="350"
-                            class="deal-banner-img">
-                        <h3>Trả góp ngay, rước BOSS liền tay!</h3>
-                    </div>
-                </div>
 
-                <div class="deal-card">
-                    <div class="deal-banner">
-                        <img src="./assets/images/blog/deal-2.png" alt="" width="280" height="370"
-                            class="deal-banner-img2">
-                    </div>
-                    <div class="deal-content-wrapper-2">
-                        <div>
-                            <div class="hr-lines" style="margin-left: 5px;">
-                                <p class="deal-name" style="padding-left:100px; font-size: 23px; margin-top: 7%;">
-                                    01.05.2023 - 01.08.2023</p>
-                            </div>
+                    <div class="deal-card">
+                        <div class="deal-banner">
+                            <img src="./assets/images/blog/deal-2.png" alt="" width="280" height="370"
+                                class="deal-banner-img2">
                         </div>
-                        <h2>GIẢM GIÁ 50% DỊCH VỤ SPA</h2>
-                        <p>Giảm ngay 50% cho dịch vụ spa lần đầu cho các khách hàng đã tin tưởng mua thú cưng tại
-                            PetLine Shop.</p>
+                        <div class="deal-content-wrapper-2">
+                            <div>
+                                <div class="hr-lines" style="margin-left: 5px;">
+                                    <p class="deal-name" style="padding-left:100px; font-size: 23px; margin-top: 7%;">
+                                        01.05.2023 - 01.08.2023</p>
+                                </div>
+                            </div>
+                            <h2>GIẢM GIÁ 50% DỊCH VỤ SPA</h2>
+                            <p>Giảm ngay 50% cho dịch vụ spa lần đầu cho các khách hàng đã tin tưởng mua thú cưng tại
+                                PetLine Shop.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-
-
     </div>
     <div id="footer"></div>
     <script src="./js/blog.js"></script>
