--- a/blog-health.html
+++ b/blog-health.html
@@ -112,60 +112,6 @@
                 <div class="blog-items">
                     <div class="blog-card" id="blog-1">
                         <div class="blog-card-banner">
-                            <img src="./assets/images/blog/blog-card-1.png" alt="" width="380" height="300"
-                                class="blog-banner-img">
-                        </div>
-                        <div class="blog-content-wrapper">
-                            <div>
-                                <div class="hr-lines" style="margin-left: 0;">
-                                    <p class="doctor-name">Bác sĩ Lê Tấn Lộc</p>
-                                </div>
-                            </div>
-                            <h3>Hướng dẫn mèo đi vệ sinh cát</h3>
-                            <p class="blog-text">
-                                Nếu bạn ghét việc phải tốn nhiều thời gian làm sạch khay cát vệ sinh của mèo mỗi ngày,
-                                bạn
-                                có
-                                thể
-                                dạy mèo đi vệ sinh đúng chỗ. Huấn luyện vệ sinh cho mèo là một cách tuyệt vời để giữ cho
-                                ngôi
-                                nhà
-                                của bạn sạch sẽ hơn, và nhiều con mèo thực hiện nó khá tốt.
-                            </p>
-                            <button>Xem hết</button>
-                            <div class="hashtag">
-                                <p>#kienthuc #meo</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="blog-card" id="blog-2">
-                        <div class="blog-card-banner">
-                            <img src="./assets/images/blog/blog-card-2.png" alt="" width="380" height="300"
-                                class="blog-banner-img">
-                        </div>
-                        <div class="blog-content-wrapper">
-                            <div>
-                                <div class="hr-lines" style="margin-left: 0;">
-                                    <p class="doctor-name">Bác sĩ Truơng Thị Thanh Thanh</p>
-                                </div>
-                            </div>
-                            <h3>Các dòng chó Pom phổ biến nhất tại Việt Nam </h3>
-                            <p class="blog-text">
-                                Chó Pom hay còn gọi là chó Phốc Sóc là một trong những giống chó cảnh
-                                nhỏ
-                                được
-                                ưa chuộng nhất tại Việt Nam hiện nay. Giống chó Pom có nhiều dòng khác nhau. Điều này có
-                                thể
-                                khiến nhiều người băn khoăn, không biết mình phù hợp để nuôi dòng chó Pom nào.
-                            </p>
-                            <button>Xem hết</button>
-                            <div class="hashtag">
-                                <p>#kienthuc #cho</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="blog-card" id="blog-3">
-                        <div class="blog-card-banner">
                             <img src="./assets/images/blog/dog&cat2.jpeg" alt="" width="380" height="300"
                                 class="blog-banner-img">
                         </div>
@@ -185,90 +131,134 @@
                                 dinh
                                 dưỡng thiết yếu và phải được cung cấp từ thức ăn.
                             </p>
-                            <button>Xem hết</button>
+                            <a href="/blog-detail.html"><button>Xem hết</button></a>
                             <div class="hashtag">
                                 <p>#suckhoe #doisong</p>
                             </div>
                         </div>
                     </div>
-                </div>
-                <!-- Pagination -->
-                <div class="pagination-container">
-                    <button class="btn-prep">
-                        <i class="fa-solid fa-caret-left"></i>
-                    </button>
-                    <ul class="pagination">
-                        <li class="page-product" value="1">1</li>
-                        <li class="page-product" value="2">2</li>
-                        <li class="page-product" value="4">...</li>
-                        <li class="page-product" value="5">5</li>
-                    </ul>
-                    <button class="btn-next">
-                        <i class="fa-solid fa-caret-right"></i>
-                    </button>
-                    <!-- <div class="pagination"> -->
-                </div>
-            </div>
-
-        </div>
-    </div>
-    </div>
-    <!-- CÁC ƯU ĐÃI -->
-    <div class="deals">
-        <div class="title" style="margin-top: 2%;">
-            <div class="hr-lines">
-                <h3>CÁC ƯU ĐÃI</h3>
-            </div>
-        </div>
-        <div class="deal-container">
-            <div class="left-deals">
-                <h4 style="font-size: 35px; color: #FE5B2E;">THÔNG TIN KHUYẾN MÃI</h4>
-                <p>Nhằm mục đích tri ân và hỗ trợ khách hàng, Petline cung cấp một số các ưu đãi, khuyến mãi dành
-                    riêng cho các Sen, nhanh tay nào!!! </p>
-                <button class="booking-btn">
-                    <div class="icon"><i class="fa-solid fa-calendar-days"></i></div>
-                    <p>ĐẶT LỊCH</p>
-                </button>
-            </div>
-            <div class="right-deals">
-                <div class="deal-card">
-                    <div class="deal-content-wrapper">
-                        <div>
-                            <div class="hr-lines" style="margin-left: 30px;">
-                                <p class="deal-name" style="padding-left:100px; font-size: 23px; margin-top: 7%;">
-                                    Ưu đãi thẻ tín
-                                    dụng</p>
+                    <div class="blog-card" id="blog-2">
+                        <div class="blog-card-banner">
+                            <img src="./assets/images/blog/cat-4.jpg" alt="" width="380" height="300"
+                                class="blog-banner-img">
+                        </div>
+                        <div class="blog-content-wrapper">
+                            <div>
+                                <div class="hr-lines" style="margin-left: 0;">
+                                    <p class="doctor-name">Bác sĩ Nguyễn Đặng Bảo Ngọc</p>
+                                </div>
+                            </div>
+                            <h3>Cách bổ sung canxi cho mèo con và trưởng thành</h3>
+                            <p class="blog-text">
+                                Việc bổ sung Canxi cho mèo không quan trọng như với chó. Bởi chế độ ăn thường ngày của
+                                mèo đã đủ lượng canxi chúng cần. Tuy nhiên, không phải như vậy mà bạn có thể dễ dàng bỏ
+                                qua vấn đề này. Trong một số trường hợp, bận vẫn cần bổ sung canxi cho mèo.
+                            </p>
+                            <button>Xem hết</button>
+                            <div class="hashtag">
+                                <p>#suckhoe #meo</p>
                             </div>
                         </div>
-                        <h1>TRẢ GÓP <br> LÃI SUẤT 0%</h1>
                     </div>
-                    <div class="deal-banner">
-                        <img src="./assets/images/blog/deal-1.png" alt="" width="350" height="350"
-                            class="deal-banner-img">
-                        <h3>Trả góp ngay, rước BOSS liền tay!</h3>
-                    </div>
-                </div>
-
-                <div class="deal-card">
-                    <div class="deal-banner">
-                        <img src="./assets/images/blog/deal-2.png" alt="" width="280" height="370"
-                            class="deal-banner-img2">
-                    </div>
-                    <div class="deal-content-wrapper-2">
-                        <div>
-                            <div class="hr-lines" style="margin-left: 5px;">
-                                <p class="deal-name" style="padding-left:100px; font-size: 23px; margin-top: 7%;">
-                                    01.05.2023 - 01.08.2023</p>
+                    <div class="blog-card" id="blog-3">
+                        <div class="blog-card-banner">
+                            <img src="./assets/images/blog/cat-14.jpg" alt="" width="380" height="300"
+                                class="blog-banner-img">
+                        </div>
+                        <div class="blog-content-wrapper">
+                            <div>
+                                <div class="hr-lines" style="margin-left: 0;">
+                                    <p class="doctor-name">Bác sĩ Truơng Thị Thanh Thanh</p>
+                                </div>
+                            </div>
+                            <h3>7 Bí quyết chăm sóc mèo luôn khỏe mạnh</h3>
+                            <p class="blog-text">
+                                Mèo là một trong những vật nuôi thân thiết đối với nhiều người. Tuy nhiên, để có thể
+                                nuôi được mèo khỏe mạnh và phát triển tốt không phải là điều dễ dàng. Chúng cần được
+                                chăm sóc đúng cách. Dưới đây là một vài bí kíp giúp bạn biết cách chăm sóc để những
+                                người bạn “meo meo” này luôn được vui vẻ.
+                            </p>
+                            <button>Xem hết</button>
+                            <div class="hashtag">
+                                <p>#suckhoe #meo</p>
                             </div>
                         </div>
-                        <h2>GIẢM GIÁ 50% DỊCH VỤ SPA</h2>
-                        <p>Giảm ngay 50% cho dịch vụ spa lần đầu cho các khách hàng đã tin tưởng mua thú cưng tại
-                            PetLine Shop.</p>
+                    </div>
+                    <!-- Pagination -->
+                    <div class="pagination-container">
+                        <button class="btn-prep">
+                            <i class="fa-solid fa-caret-left"></i>
+                        </button>
+                        <ul class="pagination">
+                            <li class="page-product" value="1">1</li>
+                            <li class="page-product" value="2">2</li>
+                            <li class="page-product" value="4">...</li>
+                            <li class="page-product" value="5">5</li>
+                        </ul>
+                        <button class="btn-next">
+                            <i class="fa-solid fa-caret-right"></i>
+                        </button>
+                        <!-- <div class="pagination"> -->
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+        <!-- CÁC ƯU ĐÃI -->
+        <div class="deals">
+            <div class="title" style="margin-top: 2%;">
+                <div class="hr-lines">
+                    <h3>CÁC ƯU ĐÃI</h3>
+                </div>
+            </div>
+            <div class="deal-container">
+                <div class="left-deals">
+                    <h4 style="font-size: 35px; color: #FE5B2E;">THÔNG TIN KHUYẾN MÃI</h4>
+                    <p>Nhằm mục đích tri ân và hỗ trợ khách hàng, Petline cung cấp một số các ưu đãi, khuyến mãi dành
+                        riêng cho các Sen, nhanh tay nào!!! </p>
+                    <button class="booking-btn">
+                        <div class="icon"><i class="fa-solid fa-calendar-days"></i></div>
+                        <p>ĐẶT LỊCH</p>
+                    </button>
+                </div>
+                <div class="right-deals">
+                    <div class="deal-card">
+                        <div class="deal-content-wrapper">
+                            <div>
+                                <div class="hr-lines" style="margin-left: 30px;">
+                                    <p class="deal-name" style="padding-left:100px; font-size: 23px; margin-top: 7%;">
+                                        Ưu đãi thẻ tín
+                                        dụng</p>
+                                </div>
+                            </div>
+                            <h1>TRẢ GÓP <br> LÃI SUẤT 0%</h1>
+                        </div>
+                        <div class="deal-banner">
+                            <img src="./assets/images/blog/deal-1.png" alt="" width="350" height="350"
+                                class="deal-banner-img">
+                            <h3>Trả góp ngay, rước BOSS liền tay!</h3>
+                        </div>
+                    </div>
+
+                    <div class="deal-card">
+                        <div class="deal-banner">
+                            <img src="./assets/images/blog/deal-2.png" alt="" width="280" height="370"
+                                class="deal-banner-img2">
+                        </div>
+                        <div class="deal-content-wrapper-2">
+                            <div>
+                                <div class="hr-lines" style="margin-left: 5px;">
+                                    <p class="deal-name" style="padding-left:100px; font-size: 23px; margin-top: 7%;">
+                                        01.05.2023 - 01.08.2023</p>
+                                </div>
+                            </div>
+                            <h2>GIẢM GIÁ 50% DỊCH VỤ SPA</h2>
+                            <p>Giảm ngay 50% cho dịch vụ spa lần đầu cho các khách hàng đã tin tưởng mua thú cưng tại
+                                PetLine Shop.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
     </div>
