--- a/header.html
+++ b/header.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <img class="logo" src="/images/black_logo.png" alt="logo" width="100" height="100">
+        <img class="logo" src="./assets/images/logo/black_logo.png" alt="logo" width="100" height="100">
         <div class="group">
             <ul class="navigation">
                 <li><a href="/contact.html" class="menu-item">Trang chủ</a></li>
