--- a/pets.html
+++ b/pets.html
@@ -18,7 +18,7 @@
     <section class="address">
         <a href="" class="address-link">Trang chủ</a>
         <span class="icon_more_than">></span>
-        <a href="" class="address-link current-link">Thú cưng</a>
+        <a href="./pets.html" class="address-link current-link">Thú cưng</a>
     </section>
 
     <!-- Content -->
@@ -98,7 +98,7 @@
                 <div class="sort-options">
                     <p>Sắp xếp theo:</p>
                     <select class="sort-select">
-                        <option value="sort" selected>Sắp xếp theo</option>
+                        <option selected>Sắp xếp theo</option>
                         <option value="low-to-high">Giá: Thấp đến cao</option>
                         <option value="high-to-low">Giá: Cao đến thấp</option>
                     </select>
