js cart (đọc data từ data_cart, tăng giảm số lượng sản phẩm -> thay đổi giá, sau khi click mua hàng, lưu data_payment cần được thanh toán, xóa(chọn) 1 hoặc tất cả sản phẩm, sau khi chọn -> hiển thị tổng giá tiền cần thanh toán)

--- a/cart.html
+++ b/cart.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="./css/cart.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <script src="./js/link_header_footer.js"></script> 
     <title>Cart</title>
 </head>
 <body>
    <!-- Header-->
-
+   <div id="header"></div>
 
     <!-- Address -->
     <section class="address">
@@ -60,60 +62,14 @@
                 <div class="cart-all">
                     <input type="checkbox" name="checkbox" id="all">
                     <label for="all">
-                        <span class="product-name">Tất cả (3 sản phẩm)</span>
+                        <span class="product-name title">Tất cả (0 sản phẩm)</span>
                     </label>
                     <p>Đơn giá</p>
                     <p>Số lượng</p>
                     <p>Thành tiền</p>
                     <i class="fa-solid fa-trash"></i>
                 </div>
-                <div class="cart-product">
-                    <div class="product">
-                        <input type="checkbox" name="checkbox" id="product-1">
-                        <img src="./images/products/image-1.jpg" alt="image-product" class="image-product"> 
-                        <label for="product-1">
-                            <span class="product-name">Thức ăn hạt cho mèo Me-O 350g</span>
-                        </label>
-                        <p>30,000đ</p>
-                        <div class="quantity-btn">
-                            <i class="fa-solid fa-minus"></i>
-                            <p class="quantity-num">1</p>
-                            <i class="fa-solid fa-plus"></i>
-                        </div>
-                        <p>30,000đ</p>
-                        <i class="fa-solid fa-trash"></i>
-                    </div>
-                    <div class="product">
-                        <input type="checkbox" name="checkbox" id="product-2">
-                        <img src="./images/products/rectangle-38.png" alt="image-product" class="image-product"> 
-                        <label for="product-2">
-                            <span class="product-name">Sữa tắm cho chó mèo Dorrikey 510ml</span>
-                        </label>
-                        <p>47,200đ</p>
-                        <div class="quantity-btn">
-                            <i class="fa-solid fa-minus"></i>
-                            <p class="quantity-num">2</p>
-                            <i class="fa-solid fa-plus"></i>
-                        </div>
-                        <p>94,400đ</p>
-                        <i class="fa-solid fa-trash"></i>
-                    </div>
-                    <div class="product">
-                        <input type="checkbox" name="checkbox" id="product-3">
-                        <img src="./images/pets/alaska.jpg" alt="image-product" class="image-product"> 
-                        <label for="product-3">
-                            <span class="product-name">Alaska Malamute trắng xám</span>
-                        </label>
-                        <p>17,000,000đ</p>
-                        <div class="quantity-btn">
-                            <i class="fa-solid fa-minus"></i>
-                            <p class="quantity-num">1</p>
-                            <i class="fa-solid fa-plus"></i>
-                        </div>
-                        <p>17,000,000đ</p>
-                        <i class="fa-solid fa-trash"></i>
-                    </div>
-                </div>
+                <div id="cart-product"></div>
             </div>
 
             <!-- Cart price -->
@@ -136,23 +92,32 @@
                 <!-- Total price -->
                 <div class="total-price">
                     <p class="name-price">Tạm tính</p>
-                    <p class="price">0<span>đ</span></p>
+                    <div class="provisional price">
+                        <span>0</span><span>đ</span>
+                    </div>
                     <p class="name-price">Giảm giá</p>
-                    <p class="price">0<span>đ</span></p>
+                    <div class="discount price">
+                        <span>0</span><span>đ</span>
+                    </div>
                     <div class="all">
                         <p class="name-price">Tổng tiền</p>
-                        <div class="price">
+                        <div class="total price">
                             <p>Vui lòng chọn sản phẩm</p>
                             <p class="note">(Đã bao gồm VAT nếu có)</p>
                         </div>
                     </div>
                 </div>
                 <!-- Button buy -->
-                <div class="btn-buy">
+                <button type="button" class="btn-buy">
                     <p>Mua hàng (0)</p>
-                </div>
+                </button>
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <div id="footer"></div>
+
+    <script type="module" src="./js/cart.js"></script>
 </body>
 </html>
