home page complete

--- a/header.html
+++ b/header.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <img class="logo" src="/images/black_logo.png" alt="logo" width="100" height="100">
+        <img class="logo" src="./assets/images/black_logo.png" alt="logo" width="100" height="100">
         <div class="group">
             <ul class="navigation">
                 <li><a href="/contact.html" class="menu-item">Trang chủ</a></li>
@@ -60,7 +60,7 @@
         <div class="searchBox">
             <input type="text" placeholder="Bạn cần tìm gì nhỉ?">
         </div>
-        <script src="/js/header.js"></script>
+        <script src="./js/header.js"></script>
     </header>
 
 </body>
