--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="./css/header.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,7 +61,7 @@
         <div class="searchBox">
             <input type="text" placeholder="Bạn cần tìm gì nhỉ?">
         </div>
-        <script src="/js/header.js"></script>
+        <script src="./js/header.js"></script>
     </header>
 
 </body>
