--- a/blog-cat.html
+++ b/blog-cat.html
@@ -133,7 +133,7 @@
                                 nhà
                                 của bạn sạch sẽ hơn, và nhiều con mèo thực hiện nó khá tốt.
                             </p>
-                            <a href="./blog-details-cat.html"><button>Xem hết</button></a>
+                            <a href="./blog-details-2.html"><button>Xem hết</button></a>
                             <div class="hashtag">
                                 <p>#kienthuc #meo</p>
                             </div>
