update blog-heath and blog

--- a/blog-health.html
+++ b/blog-health.html
@@ -131,7 +131,7 @@
                                 dinh
                                 dưỡng thiết yếu và phải được cung cấp từ thức ăn.
                             </p>
-                            <a href="/blog-detail.html"><button>Xem hết</button></a>
+                            <a href="./blog-details.html"><button>Xem hết</button></a>
                             <div class="hashtag">
                                 <p>#suckhoe #doisong</p>
                             </div>
