--- a/blog.html
+++ b/blog.html
@@ -132,7 +132,7 @@
                                 nhà
                                 của bạn sạch sẽ hơn, và nhiều con mèo thực hiện nó khá tốt.
                             </p>
-                            <button>Xem hết</button>
+                            <a href="./blog-details-2.html"><button>Xem hết</button></a>
                             <div class="hashtag">
                                 <p>#kienthuc #meo</p>
                             </div>
@@ -185,7 +185,7 @@
                                 dinh
                                 dưỡng thiết yếu và phải được cung cấp từ thức ăn.
                             </p>
-                            <button>Xem hết</button>
+                            <a href="./blog-details.html"><button>Xem hết</button></a>
                             <div class="hashtag">
                                 <p>#suckhoe #doisong</p>
                             </div>
