--- a/transpost.html
+++ b/transpost.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="./css/transpost.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="./js/link_header_footer.js"></script> 
     <title>Transpost</title>
 </head>
 <body>
    <!-- Header-->
-
+   <div id="header"></div>
 
     <!-- Address -->
     <section class="address">
@@ -22,7 +23,7 @@
         <!-- Progress bar -->
         <div class="progress-bar">
             <ul class="bar">
-                <li class="pre">
+                <li class="pre cart-page">
                     <i class="fa-solid fa-chevron-down"></i>
                     <div class="progress one">
                         <i class="fa-solid fa-check"></i>
@@ -132,5 +133,10 @@
             </form>
         </div>
     </section>
+
+    <!-- Footer -->
+    <div id="footer"></div>
+
+    <script type="module" src="./js/transpost.js"></script>
 </body>
 </html>
