--- a/blog-cat.html
+++ b/blog-cat.html
@@ -20,29 +20,29 @@
     <div id="header"></div>
     <!-- Giới thiệu -->
     <div class="container">
+        <div class="bg_overlay"></div>
         <div class="page-ruler">
-            <p>TRANG CHỦ > BÀI VIẾT</p>
+            <p>TRANG CHỦ > <b>BÀI VIẾT</b></p>
         </div>
         <div class="intro">
             <div class="left-intro">
-                <h3>CÓ THỂ BẠN CHƯA BIẾT</h3>
-                <h5>Chăm sóc | Nuôi dạy | Kiến thức</h5>
+                <h2>CÓ THỂ BẠN CHƯA BIẾT</h2>
+                <h4>Chăm sóc | Nuôi dạy | Kiến thức</h4>
                 <p>Nơi chia sẻ, trao đổi một số tips, kinh nghiệm nuôi dạy, chăm sóc sức khoẻ của thú cưng, ...</p>
             </div>
             <div class="right-intro">
                 <div class="img">
-                    <img src="./assets/images/blog/cat-glasses-1.png" alt="" height="620px" width="1050px">
+                    <img src="./assets/images/blog/cat-glasses-1.png" alt="" height="450px" width="750px">
                 </div>
 
             </div>
         </div>
-
         <!-- CÁC BÀI VIẾT -->
         <div class="news">
             <div class="new">
                 <div class="title">
                     <div class="hr-lines">
-                        <h3>TIN TỨC</h3>
+                        <h2>TIN TỨC</h2>
                     </div>
                 </div>
                 <div class="new-container">
@@ -152,9 +152,8 @@
                             </div>
                             <h3>Cho mèo ăn gì để lông mượt mà không bị xơ</h3>
                             <p class="blog-text">
-                                Cho mèo ăn gì để lông mượt mà, đẹp không xơ rối là thắc mắc của rất nhiều người nuôi
-                                mèo. Tất cả chủ nuôi đều muốn chăm sóc mèo một cách tốt nhất, tránh để lông mèo bị xơ
-                                rối. Tuy nhiên, đối với những người mới nuôi mèo lần đầu hoặc chưa có kinh nghiệm sẽ gặp
+                                Cho mèo ăn gì để lông mượt, đẹp không xơ rối là thắc mắc của rất nhiều người nuôi
+                                mèo. Tất cả chủ nuôi đều muốn chăm sóc mèo một cách tốt nhất. Tuy nhiên, đối với những người mới nuôi mèo lần đầu hoặc chưa có kinh nghiệm sẽ gặp
                                 không ít khó khăn.
                             </p>
                             <button>Xem hết</button>
@@ -209,7 +208,7 @@
         <div class="deals">
             <div class="title" style="margin-top: 2%;">
                 <div class="hr-lines">
-                    <h3>CÁC ƯU ĐÃI</h3>
+                    <h2>CÁC ƯU ĐÃI</h2>
                 </div>
             </div>
             <div class="deal-container">
@@ -261,8 +260,26 @@
                 </div>
             </div>
         </div>
+                <!-- partner -->
+        <div class="partner">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 73.5 70.7" style="enable-background:new 0 0 73.5 70.7;" xml:space="preserve"><g>	<path d="M14,37.3c3.2-5.9,13.6-10.5,22.7-0.4c9.1-10.1,19.5-5.5,22.7,0.4c9.3,17.2-22.5,31-22.7,31.1C36.5,68.3,4.7,54.5,14,37.3z"></path>	<path d="M60.5,32.2c-3.3-1.5-4.3-6.3-2.4-10.8c2-4.5,6.3-6.9,9.5-5.5s4.3,6.3,2.4,10.8c-1.6,3.6-4.7,5.9-7.5,5.9  C61.8,32.6,61.2,32.5,60.5,32.2L60.5,32.2z"></path>	<path d="M3.5,26.7c-2-4.5-0.9-9.3,2.4-10.8s7.6,1,9.5,5.5s0.9,9.3-2.4,10.8c-0.6,0.3-1.3,0.4-2,0.4C8.1,32.6,5.1,30.3,3.5,26.7z"></path>	<path d="M44.1,23.3c-4.2-1.1-6.3-6.7-4.8-12.4s6.2-9.4,10.4-8.3S56,9.3,54.5,15c-1.4,5-5.1,8.5-8.8,8.5  C45.1,23.5,44.6,23.4,44.1,23.3L44.1,23.3z"></path>	<path d="M19,15c-1.5-5.7,0.6-11.3,4.8-12.4s8.8,2.6,10.4,8.3s-0.6,11.3-4.8,12.4c-0.5,0.1-1,0.2-1.5,0.2C24.2,23.5,20.4,20,19,15  L19,15z"></path></g></svg>
+            <h1>Đối Tác</h1>
+            <div class="partner_wrapper">
+                <div class="partner_list">
+                    <img src="./assets/images/Home1/logo_partner1.png" alt="logo_partner1" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner2.png" alt="logo_partner2" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner3.png" alt="logo_partner3" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner4.png" alt="logo_partner4" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner5.png" alt="logo_partner5" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner6.png" alt="logo_partner6" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner7.png" alt="logo_partner7" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner8.png" alt="logo_partner8" class="logo_partner">
+                </div>
+            </div>
+        </div>
+        
     </div>
-    <div id="footer"></div>
+    <div id="footer"  style=" position: absolute; width: 100%; top: 520vh;"></div>
     <script src="./js/blog.js"></script>
 
 </body>
