blog-details updated new font-size

--- a/blog-details-2.html
+++ b/blog-details-2.html
@@ -23,7 +23,7 @@
     <div class="blog-details-container">
         <div class="blog-details-create">
             <img src="./assets/images/blog-details/title-image-2.jpg" alt="" class="blog-detail-1-img" width="92%"
-                height="600px">
+                height="500px">
             <div class="author-btn">
                 <p class="btn">BV1012</p>
                 <p class="btn">#kienthuc</p>
@@ -125,7 +125,7 @@
             </p>
         </div>
     </div>
-    <div class="other-news">
+    <div class="other-news" >
         <div class="title">
             <div class="hr-line">
                 <h1> BÀI VIẾT KHÁC</h1>
@@ -167,7 +167,7 @@
                             <p class="doctor-name">Bác sĩ Truơng Thị Thanh Thanh</p>
                         </div>
                     </div>
-                    <h3>Nguyên nhân, dấu hiệu, cách phòng bệnh Giảm bạch cầu ở mèo</h3>
+                    <h3>Nguyên nhân, dấu hiệu, cách phòng Giảm Bạch Cầu ở mèo</h3>
                     <p class="blog-text">
                         Bạch cầu là cơ chế phòng vệ tự nhiên ở động vật nói chung bao gồm cả con người và mèo. Nên việc
                         mèo bị giảm bạch cầu làm suy yếu chung hệ thống miễn dịch của mèo, tạo điều kiện cho các bệnh
@@ -183,7 +183,7 @@
             </div>
         </div>
     </div>
-    <div id="footer"></div>
+    <div id="footer" style="position: absolute; width: 100%;top: 680vh;"></div>
 </body>
 
 </html>
