--- a/blog-details.html
+++ b/blog-details.html
@@ -18,12 +18,12 @@
 <body>
     <div id="header"></div>
     <div class="page-ruler">
-        <p>TRANG CHỦ > BÀI VIẾT > BV1001</p>
+        <p>TRANG CHỦ > BÀI VIẾT > <b>BV1001</b></p>
     </div>
     <div class="blog-details-container">
         <div class="blog-details-create">
             <img src="./assets/images/blog-details/title-image-1.png" alt="" class="blog-detail-1-img" width="92%"
-                height="700px">
+                height="500px">
             <div class="author-btn">
                 <p class="btn">BV1001</p>
                 <p class="btn">#suckhoe</p>
