--- a/confirm.html
+++ b/confirm.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="./css/confirm.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="./js/link_header_footer.js"></script> 
     <title>Cart</title>
 </head>
 <body>
    <!-- Header-->
-
+   <div id="header"></div>
 
     <!-- Address -->
     <section class="address">
@@ -59,21 +60,20 @@
                 <div class="image"></div>
                 <div class="sub-title">
                     <h3>Yay, bạn đã hoàn tất việc đặt hàng!</h3>
-                    <p>Hãy chuẩn bị tiền mặt 17,124,400<span>đ</span></p>
                 </div>
                 <div class="sub-content">
                     <div class="payment-methods">
                         <p class="payment-name">Phương thức thanh toán</p>
-                        <p>Thanh toán tiền mặt</p>
+                        <p class="paymemt-delivery"></p>
                     </div>
                     <div class="payment-amount">
                         <p class="payment-name">Tổng cộng</p>
                         <div class="payment-number">
-                            <p>17,124,400đ</p>
+                            <p><span>17,124,400</span><span>đ</span></p>
                             (Đã bao gồm VAT nếu có)
                         </div>
                     </div>
-                    <button type="button">Quay về trang chủ</button>
+                    <button type="button" class="return-home">Quay về trang chủ</button>
                 </div>
             </div>
 
@@ -83,21 +83,16 @@
                 <a href="" class="view-order">Xem đơn hàng</a>
                 <div class="product-order">
                     <p class="delivery-date">Giao vào Thứ Năm, 15/06</p>
-                    <div class="order">
-                        <img src="./images/products/image-1.jpg" alt="image-product" class="image-order"> 
-                        <p class="order-name">Thức ăn hạt cho mèo Me-O 350g</p>
-                    </div>
-                    <div class="order">
-                        <img src="./images/products/rectangle-38.png" alt="image-product" class="image-order"> 
-                        <p class="order-name">Sữa tắm cho chó mèo Dorrikey 510ml</p>
-                    </div>
-                    <div class="order">
-                        <img src="./images/pets/alaska.jpg" alt="image-product" class="image-order"> 
-                        <p class="order-name">Alaska Malamute trắng xám</p>
-                    </div>
+                    <div id="all-product-order"></div>
                 </div>
             </div>
         </div>
     </section>
+        
+    <!-- Footer -->
+    <div id="footer"></div>
+
+    <script type="module" src="./js/confirm.js"></script>
+
 </body>
 </html>
