đổi tên file pets thành pet-category

--- a/header.html
+++ b/header.html
@@ -24,8 +24,8 @@
         <div class="group">
             <ul class="navigation">
                 <li><a href="/contact.html" class="menu-item">Trang chủ</a></li>
-                <li><a href="./pets.html" class="menu-item">Cửa hàng</a></li>
-                <li><a href="#" class="menu-item">Thú cưng</a></li>
+                <li><a href="" class="menu-item">Cửa hàng</a></li>
+                <li><a href="./pet-category.html" class="menu-item">Thú cưng</a></li>
                 <li><a href="#" class="menu-item parent-item">Dịch vụ</a><i
                         class="fa-solid fa-chevron-down htmlcss-arrow arrow" id="service-icon"></i>
                     <ul class="dropdown">
