--- a/pet-category.html
+++ b/pet-category.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/pets.css">
+    <link rel="stylesheet" href="./css/pet-category.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -119,6 +119,6 @@
     <!-- Footer -->
     <div id="footer"></div>
 
-    <script type="module" src="./js/pets.js"></script>
+    <script type="module" src="./js/pet-category.js"></script>
 </body>
 </html>
